[package]
name = "partition-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-robot-map = { path = "../local-robot-map" }
axum = "0.6.18"
tokio = { version = "*", features = [ "macros", "rt-multi-thread" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"
imageproc = "0.23.0"
edge-detection = "0.2.6"
